--- a/src/components/layout/Modal.module.css
+++ b/src/components/layout/Modal.module.css
@@ -11,8 +11,10 @@
 }
 
 .modal {
-  background-color: white;
+  background-color: var(--background-color);
+  color: var(--text-color);
   border-radius: 5px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  /* box-shadow: 0 0 20px rgba(202, 1, 192, 0.8); */
+  box-shadow: 0 0 20px var(--primary-color);
   padding: 2rem;
 }
