--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
+
 body {
-  margin: 0;
   background-color: #efefef;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
